baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__while_let.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Tests"
For "for"
Error "`"
While "while"
Let "let"
Error "`"
Word "loops"
Comma ","
Word "modeled"
Word "on"
Word "Rust"
Error "'"
Word "s"
Error "`"
While "while"
Let "let"
Error "`"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Error "`"
While "while"
Let "let"
Less "<"
Word "pat"
Greater ">"
Equals "="
Less "<"
Word "expr"
Greater ">"
LBrace "{"
Word "body"
RBrace "}"
Error "`"
Word "desugars"
Word "at"
Word "AST"
Word "lowering"
Word "time"
Word "to"
Colon ":"
Slash "/"
Slash "/"
While "while"
LParen "("
Word "true"
RParen ")"
LBrace "{"
Slash "/"
Slash "/"
Match "match"
LParen "("
Less "<"
Word "expr"
Greater ">"
RParen ")"
LBrace "{"
Slash "/"
Slash "/"
Less "<"
Word "pat"
Greater ">"
FatArrow "=>"
LBrace "{"
Word "body"
RBrace "}"
Comma ","
Slash "/"
Slash "/"
Word "_"
FatArrow "=>"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Comma ","
Slash "/"
Slash "/"
RBrace "}"
Slash "/"
Slash "/"
RBrace "}"
Function "function"
Word "while_let_type_narrow_terminates_on_mismatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Slash "/"
Slash "/"
Word "First"
Word "iteration"
Word "matches"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Comma ","
Word "second"
Word "iteration"
Word "we"
Word "rewrite"
Word "x"
Word "to"
Word "a"
Slash "/"
Slash "/"
Word "string"
Word "so"
Word "the"
Match "match"
Word "arm"
Error "`"
Let "let"
Word "n"
Colon ":"
Word "int"
Error "`"
Word "no"
Word "longer"
Word "matches"
Word "and"
Word "the"
Word "loop"
Slash "/"
Slash "/"
Word "breaks"
Word "via"
Word "the"
Word "synthesised"
Word "wildcard"
Word "arm"
Dot "."
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "count"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "x"
LBrace "{"
Word "count"
Equals "="
Word "count"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
If "if"
Word "count"
GreaterEquals ">="
IntegerLiteral "3"
LBrace "{"
Word "x"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
RBrace "}"
Semicolon ";"
Return "return"
Word "count"
Semicolon ";"
RBrace "}"
Function "function"
Word "while_let_with_assignment_inside"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "5"
Semicolon ";"
Let "let"
Word "sum"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "sum"
Equals "="
Word "sum"
Plus "+"
Word "n"
Semicolon ";"
If "if"
Word "sum"
GreaterEquals ">="
IntegerLiteral "15"
LBrace "{"
Word "v"
Equals "="
Quote "\""
Word "done"
Quote "\""
Semicolon ";"
RBrace "}"
RBrace "}"
Semicolon ";"
Return "return"
Word "sum"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "NOTE"
Colon ":"
Word "irrefutable"
Error "`"
While "while"
Let "let"
Error "`"
LParen "("
Word "e"
Dot "."
Word "g"
Dot "."
Error "`"
While "while"
Let "let"
Word "n"
Equals "="
Word "i"
LBrace "{"
DotDotDot "..."
Break "break"
RBrace "}"
Error "`"
RParen ")"
Word "is"
Slash "/"
Slash "/"
Word "intentionally"
Word "not"
Word "covered"
Word "here"
Error "—"
Word "BAML"
Error "'"
Word "s"
Match "match"
Word "exhaustiveness"
Word "check"
Slash "/"
Slash "/"
Word "reports"
Word "the"
Word "synthetic"
Break "break"
Word "arm"
Word "as"
Quote "\""
Word "unreachable"
Word "arm"
Quote "\""
Dot "."
Word "Rust"
Word "rejects"
Word "the"
Slash "/"
Slash "/"
Word "same"
Word "pattern"
Word "as"
Error "`"
Word "irrefutable"
Word "while-let"
Word "pattern"
Error "`"
Dot "."
Function "function"
Word "while_let_nested"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "inner"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "10"
Semicolon ";"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "o"
Colon ":"
Word "int"
Equals "="
Word "outer"
LBrace "{"
While "while"
Let "let"
Word "i"
Colon ":"
Word "int"
Equals "="
Word "inner"
LBrace "{"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "o"
Plus "+"
Word "i"
Semicolon ";"
Word "inner"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
Semicolon ";"
Word "outer"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
Word "inner"
Equals "="
IntegerLiteral "10"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Function "function"
Word "while_let_with_continue"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "v"
Equals "="
Word "n"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
If "if"
Word "n"
EqualsEquals "=="
IntegerLiteral "2"
LBrace "{"
Continue "continue"
Semicolon ";"
RBrace "}"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
If "if"
Word "n"
GreaterEquals ">="
IntegerLiteral "4"
LBrace "{"
Word "v"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
