baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__while_let_edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Edge"
Word "cases"
For "for"
Error "`"
While "while"
Let "let"
Error "`"
Colon ":"
Slash "/"
Slash "/"
Minus "-"
Word "binding"
Word "visibility"
Word "scoped"
Word "to"
Word "loop"
Word "body"
Word "only"
Slash "/"
Slash "/"
Minus "-"
Break "break"
Slash "/"
Continue "continue"
Word "work"
Word "inside"
Word "the"
Word "loop"
Word "body"
Slash "/"
Slash "/"
Minus "-"
Word "mutations"
Word "of"
Word "the"
Word "scrutinee"
Word "variable"
Word "terminate"
Word "the"
Word "loop"
Word "on"
Word "type"
Word "change"
Slash "/"
Slash "/"
Minus "-"
Word "nested"
Word "while-let"
Slash "/"
Slash "/"
Minus "-"
Word "lambda"
Word "capture"
Word "of"
Word "the"
Word "binding"
Word "inside"
Word "the"
Word "loop"
Word "body"
Slash "/"
Slash "/"
Word "Outer"
Error "`"
Word "n"
Error "`"
Word "is"
Word "shadowed"
Word "by"
Word "the"
Word "while-let"
Word "binding"
Word "inside"
Word "the"
Word "body"
Dot "."
Word "After"
Word "the"
Slash "/"
Slash "/"
Word "loop"
Comma ","
Error "`"
Word "n"
Error "`"
Word "refers"
Word "to"
Word "the"
Word "outer"
Word "binding"
Word "again"
Dot "."
Function "function"
Word "while_let_shadow_then_restore"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "n"
Equals "="
IntegerLiteral "42"
Semicolon ";"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "5"
Semicolon ";"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
Word "v"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
Semicolon ";"
Slash "/"
Slash "/"
Word "After"
Word "the"
Word "loop"
Error "`"
Word "n"
Error "`"
Word "must"
Word "be"
Word "the"
Word "OUTER"
IntegerLiteral "42"
Dot "."
Return "return"
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Error "`"
Break "break"
Error "`"
Word "inside"
Word "while-let"
Word "exits"
Word "the"
Word "loop"
Word "immediately"
Dot "."
Function "function"
Word "while_let_explicit_break"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "count"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "count"
Equals "="
Word "count"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
If "if"
Word "n"
GreaterEquals ">="
IntegerLiteral "3"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Word "v"
Equals "="
Word "n"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "count"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Error "`"
Continue "continue"
Error "`"
Word "inside"
Word "while-let"
Word "goes"
Word "back"
Word "to"
Word "the"
Word "loop"
Word "condition"
Word "without"
Slash "/"
Slash "/"
Word "running"
Word "the"
Word "rest"
Word "of"
Word "the"
Word "body"
Dot "."
Function "function"
Word "while_let_explicit_continue"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "v"
Equals "="
Word "n"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
If "if"
Word "n"
EqualsEquals "=="
IntegerLiteral "2"
LBrace "{"
Continue "continue"
Semicolon ";"
RBrace "}"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
If "if"
Word "n"
GreaterEquals ">="
IntegerLiteral "4"
LBrace "{"
Word "v"
Equals "="
Quote "\""
Word "done"
Quote "\""
Semicolon ";"
RBrace "}"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "inside"
Word "while-let"
Word "body"
Word "captures"
Word "the"
Word "loop"
Word "binding"
Dot "."
Function "function"
Word "while_let_lambda_captures"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "3"
Semicolon ";"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "n"
Plus "+"
IntegerLiteral "1"
RBrace "}"
Semicolon ";"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "f"
LParen "("
RParen ")"
Semicolon ";"
Word "v"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "while-let"
Word "nested"
Word "inside"
Word "an"
Word "if-let"
Word "body"
Dot "."
Function "function"
Word "while_let_inside_if_let"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "inner"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "3"
Semicolon ";"
Let "let"
Word "total"
Equals "="
IntegerLiteral "0"
Semicolon ";"
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "outer"
LBrace "{"
While "while"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
Word "inner"
LBrace "{"
Word "total"
Equals "="
Word "total"
Plus "+"
Word "x"
Plus "+"
Word "y"
Semicolon ";"
Word "inner"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
Semicolon ";"
RBrace "}"
Return "return"
Word "total"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "if-let"
Word "nested"
Word "inside"
Word "a"
Word "while-let"
Word "body"
Dot "."
Function "function"
Word "if_let_inside_while_let"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Let "let"
Word "other"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "100"
Semicolon ";"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
If "if"
Let "let"
Word "m"
Colon ":"
Word "int"
Equals "="
Word "other"
LBrace "{"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Plus "+"
Word "m"
Semicolon ";"
RBrace "}"
Word "v"
Equals "="
Quote "\""
Word "stop"
Quote "\""
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
